--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         let files = {}; // devient un objet { username: [fichiers...] }
         // Définition des comptes dans le code
         const users = [
-          { id: "admin-001", username: "admin", password: "admin123", lastname: "Admin", firstname: "Super", isAdmin: true },
+          { id: "admin-001", username: "admin", password: "@cacapipiproute", lastname: "chupachups", firstname: "......", isAdmin: true },
           { id: "chapeau-de-paille", username: "chapeau-de-paille", password: "321", lastname: "chapeau-de", firstname: "paille", isAdmin: false }
         ];
         let currentUser = null;
